# rc-adc

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.md  README.md  dodo.py  icebreaker.py  pyproject.toml  rc.py
.github/workflows/: ci.yml
board/: diff-assign.smt2  fp-lib-table  pmod-rc.kicad_dru  pmod-rc.kicad_pcb  pmod-rc.kicad_prl  pmod-rc.kicad_pro  pmod-rc.kicad_sch  pmod-rc.kicad_sym  sym-lib-table
board/pmod-rc.pretty/: Pmod_SpecB.kicad_mod
docs/: conf.py  index.md
examples/: icebreaker.py
src/rc_adc/: __init__.py  adc.py  dac.py  rc.py  version.txt
tests/: test_basic.py
